--- a/cornStick.html
+++ b/cornStick.html
@@ -6,8 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>cornStick</title>
-<script defer src="polyfill.ec8ceb0e30d8433fec6c.js"></script><script defer src="app.ec8ceb0e30d8433fec6c.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.05be5e97a7db2b386280.js"></script><script defer src="app.05be5e97a7db2b386280.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
+  <div class="preloader">
+    <div class="preloader__row">
+      <div class="preloader__item"></div>
+      <div class="preloader__item"></div>
+    </div>
+  </div>
   <div class="products__header__section">
     <div class="header__body">
       <nav class="header__menu">
