--- a/bagel.html
+++ b/bagel.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>bagel</title>
-<script defer src="polyfill.05be5e97a7db2b386280.js"></script><script defer src="app.05be5e97a7db2b386280.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.38e315535a82cca5b256.js"></script><script defer src="app.38e315535a82cca5b256.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -19,7 +19,7 @@
       <nav class="header__menu">
         <ul class="header__list">
           <li><a href="./product-category.html" class="header__link lang" key="products">Products</a></li>
-          <li><a href="#" class="header__link lang" key="store">Store</a></li>
+          <li><a href="#" class="header__link lang inProcess" key="store">Store</a></li>
           <li><a href="#" class="header__link lang" key="news">News</a></li>
           <li><a href="./contactUs.html" class="header__link lang" key="contactUs">Contact Us</a></li>
         </ul>
@@ -48,10 +48,10 @@
             <button id="uk" class="translate"><img src="223552343cc5054e4f46.png" alt=""></button>
           </li>
           <li class="header__icon basket">
-            <i class="material-icons">shopping_basket</i>
+            <i class="material-icons inProcess">shopping_basket</i>
           </li>
           <li class="header__icon account">
-            <i class="material-icons">account_circle</i>
+            <i class="material-icons inProcess">account_circle</i>
           </li>
           <li class="header__icon burger">
             <div class="header__burger">
