--- a/custard.html
+++ b/custard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>custard</title>
-<script defer src="polyfill.38e315535a82cca5b256.js"></script><script defer src="app.38e315535a82cca5b256.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.0388eabd6c24f8395262.js"></script><script defer src="app.0388eabd6c24f8395262.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -20,7 +20,7 @@
         <ul class="header__list">
           <li><a href="./product-category.html" class="header__link lang" key="products">Products</a></li>
           <li><a href="#" class="header__link lang inProcess" key="store">Store</a></li>
-          <li><a href="#" class="header__link lang" key="news">News</a></li>
+          <li><a href="./news.html" class="header__link lang" key="news">News</a></li>
           <li><a href="./contactUs.html" class="header__link lang" key="contactUs">Contact Us</a></li>
         </ul>
       </nav>
