--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>butter</title>
+  <title>news</title>
 <script defer src="polyfill.0388eabd6c24f8395262.js"></script><script defer src="app.0388eabd6c24f8395262.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
@@ -64,37 +64,26 @@
   </div>
   <div class="pa__navigation">
     <div class="container2 flex">
-      <h4  class="lang__navigation__product__page" key="butter">Butter Cookies</h4>
+      <h4 class="lang__navigation__product__page" key="news">News</h4>
       <ul>
         <li><a href="./index.html" class="arrow lang__navigation__product__page" key="home">Home</a></li>
-        <li><a href="./product-category.html" class="arrow lang__navigation__product__page" key="categories">categories</a></li>
-        <li class="lang__navigation__product__page" key="butter">Butter Cookies</li>
+        <li class="lang__navigation__product__page" key="news">News</li>
       </ul>
     </div>
   </div>
-  <div class="pa__products">
-    <div class="container2">
-      <div class="products">
-        <div class="product">
-          <div class="product__img">
-            <img src="18386bde1f42e10037e3.jpg" alt="">
+  <div class="pa__header">
+    <h1 class="lang" key="open__new__warehouse">opening a new warehouse</h1>
+  </div>
+  <div class="news__section">
+    <div class="container1">
+      <div class="news__flex__container">
+        <div class="card__news">
+          <div class="news__img">
+            <img src="e48c2ed5d41c78f8baeb.jpg" alt="">
           </div>
-          <div class="product__description">
-            <h1>Cookies «CHEESE LEAVES»</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, molestias perspiciatis quod rerum laborum dicta doloribus adipisci omnis natus beatae, a voluptatibus atque consequatur ex exercitationem voluptas dolore quasi vitae.</p>
-          </div>
-        </div>
-        <span></span>
-        <div class="product">
-          <div class="product__img">
-            <img src="9509292e989101b3acb0.jpg" alt="">
-          </div>
-          <div class="product__description">
-            <h1>Cookies «DNEPR KAZKI»</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis ratione sapiente deserunt illo iure, ex rerum aliquam beatae fugiat, ad aspernatur dolorum eligendi fugit, dolor tenetur architecto doloribus! Quis, atque.</p>
+          <div class="news__desc lang__about__page" key="news1">Friends! We want to share with you another joyful event in the life of our Company. Our warehouse in Kryvyi Rih has moved to a new address, now we are on the street. S. Tilgi 34c. Such changes have a positive impact on the work of our team and inspire the use of new opportunities.
           </div>
         </div>
-        <span></span>
       </div>
     </div>
   </div>
